--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -61,7 +61,7 @@
             <div class="col-lg-6 col-md-8 mx-auto">
                 <img src="/assets/brand/logo-sky-lg.png" alt="" width="600" class="center">
                 <!--todo delete<h1 class="fw-light">Mouken</h1>-->
-                <p class="lead text-muted" th:text="#{index.intro}"></p>
+<!--                <p class="lead text-muted" th:text="#{index.intro}"></p>-->
                 <p sec:authorize="!isAuthenticated()">
                     <a href="#" th:href="@{/sign-up}" class="btn btn-dark-sky my-2" >Create Account</a>
                     <a href="#" th:href="@{/login}" class="btn btn-sky my-2">Sign In</a>
