--- a/src/main/resources/templates/settings/account.html
+++ b/src/main/resources/templates/settings/account.html
@@ -29,7 +29,7 @@
                     <small class="form-text text-danger" th:if="${#fields.hasErrors('newUsername')}" th:errors="*{newUsername}">username Error</small>
                 </div>
                 <div class="form-group d-flex align-items-end flex-column">
-                    <button class="btn btn-outline-primary" type="submit" aria-describedby="submitHelp" disabled>Confirm</button>
+                    <button class="btn btn-sky" type="submit" aria-describedby="submitHelp" disabled>Confirm</button>
                 </div>
             </form>
             <h5 class="text-danger">Delete account</h5>
