--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -306,7 +306,7 @@
         <script src="/node_modules/moment/min/moment-with-locales.min.js"></script>
         <script type="application/javascript">
             $(function () {
-                moment.locale('ko');
+                moment.locale('en');
                 $(".date-time").text(function(index, dateTime) {
                     return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LLL');
                 });
