--- a/src/main/resources/templates/party/settings/banner.html
+++ b/src/main/resources/templates/party/settings/banner.html
@@ -61,7 +61,7 @@
                         <input id="bannerImage" type="hidden" name="image" class="form-control" />
                     </div>
                     <div class="form-group d-flex align-items-end flex-column">
-                        <button class="btn btn-primary btn-block" type="submit">Save</button>
+                        <button class="btn btn-sky btn-block" type="submit">Save</button>
                     </div>
                 </form>
             </div>
