--- a/src/main/resources/templates/party/settings/description.html
+++ b/src/main/resources/templates/party/settings/description.html
@@ -14,10 +14,10 @@
 
     <div class="row mt-3 justify-content-center">
 
-        <div class="col-md-2 col-10">
+        <div class="col-lg-2 col-3">
             <div th:replace="fragments.html :: party-settings-menu(currentMenu='description')"></div>
         </div>
-        <div class="col-md-8 col-10">
+        <div class="col-8">
             <div th:replace="fragments.html :: message"></div>
             <form class="needs-validation" th:action="@{'/party/' + ${party.getPath()} + '/settings/description'}"
                   th:object="${partyDescriptionForm}" method="post" novalidate>
