--- a/src/main/resources/templates/settings/notifications.html
+++ b/src/main/resources/templates/settings/notifications.html
@@ -60,7 +60,7 @@
                         </div>
                     </div>
                     <div class="form-group d-flex align-items-end flex-column">
-                        <button class="btn btn-primary btn-block" type="submit" aria-describedby="submitHelp">Confirm</button>
+                        <button class="btn btn-sky btn-block" type="submit" aria-describedby="submitHelp">Confirm</button>
                     </div>
                 </form>
         </div>
