--- a/src/main/resources/templates/settings/password.html
+++ b/src/main/resources/templates/settings/password.html
@@ -41,7 +41,7 @@
                     <small class="form-text text-danger field-error" th:errors="*{newPasswordConfirm}">newPasswordConfirm</small>
                 </div>
                 <div class="form-group d-flex align-items-end flex-column">
-                    <button class="btn btn-primary btn-block" type="submit">Confirm</button>
+                    <button class="btn btn-sky btn-block" type="submit">Confirm</button>
                 </div>
             </form>
         </div>
