--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -79,7 +79,7 @@
                         <input id="picture" type="hidden" th:field="*{picture}" class="form-control" />
                     </div>
                     <div class="form-group d-flex align-items-end flex-column">
-                        <button class="btn btn-primary btn-block" type="submit">Confirm</button>
+                        <button class="btn btn-sky btn-block" type="submit">Confirm</button>
                     </div>
                 </form>
             </div>
