--- a/src/main/resources/templates/party/settings/tags.html
+++ b/src/main/resources/templates/party/settings/tags.html
@@ -13,11 +13,11 @@
 
 <main class="container">
     <div class="row mt-3 justify-content-center">
-        <div class="col-lg-2 col-3">
+        <div class="col-xs-10 col-sm-11 col-md-3 col-lg-2 col-xl-2 mb-3">
             <!-- menu -->
             <div th:replace="fragments.html :: party-settings-menu(currentMenu='tags')"></div>
         </div>
-        <div class="col-8">
+        <div class="col-xs-10 col-sm-11 col-md-8 col-lg-9 col-xl-10">
             <!-- description -->
             <div class="alert alert-dark" role="alert">
                 You can add a tag with comma or enter key.
