--- a/src/main/resources/templates/settings/zones.html
+++ b/src/main/resources/templates/settings/zones.html
@@ -12,7 +12,7 @@
 <main>
     <div class="container">
         <div class="row my-5 justify-content-center">
-            <div class="col-lg-2 col-3">
+            <div class="col-lg-2 col-3 me-2">
                 <div th:replace="fragments.html :: settings-menu(currentMenu='zones')"></div>
             </div>
 
