--- a/src/main/resources/templates/party/settings/party.html
+++ b/src/main/resources/templates/party/settings/party.html
@@ -12,10 +12,10 @@
 
 <main class="container">
     <div class="row mt-3 justify-content-center">
-        <div class="col-lg-2 col-3">
+        <div class="col-xs-10 col-sm-11 col-md-3 col-lg-2 col-xl-2 mb-3">
             <div th:replace="fragments.html :: party-settings-menu(currentMenu='party')"></div>
         </div>
-        <div class="col-8">
+        <div class="col-xs-10 col-sm-11 col-md-8 col-lg-9 col-xl-10">
             <div th:replace="fragments.html :: message"></div>
 
             <!--<label for="party-settings-info" class="form-label">Info</label>
