--- a/src/main/resources/templates/settings/password.html
+++ b/src/main/resources/templates/settings/password.html
@@ -10,7 +10,7 @@
 
 <main class="container">
     <div class="row my-5 justify-content-center">
-        <div class="col-lg-2 col-3">
+        <div class="col-lg-2 col-3 me-2">
             <!-- menu -->
             <div th:replace="fragments.html :: settings-menu(currentMenu='password')"></div>
         </div>
