--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -11,7 +11,7 @@
 
 <main class="container">
     <div class="row my-5 justify-content-center">
-        <div class="col-lg-2 col-3">
+        <div class="col-lg-2 col-3 me-2">
             <!-- menu -->
             <div th:replace="fragments.html :: settings-menu(currentMenu='profile')"></div>
         </div>
