chore: modify error pages for 4xx, 5xx

--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -8,10 +8,10 @@
 <body>
 <main class="container">
     <section class="jumbotron text-center">
-        <h1>403 Forbidden</h1>
+        <h1>404 Not Found</h1>
         <p class="lead text-muted">
-            Access to the requested resource is forbidden.<br/>
-            Please contact the administrator for further assistance.<br/>
+            he requested resource could not be found.<br/>
+            Please check the URL and try again.<br/>
         </p>
         <p>
             <a th:href="@{/}" class="btn btn-primary my-2">Main page</a>
