--- a/src/main/resources/templates/error/503.html
+++ b/src/main/resources/templates/error/503.html
@@ -8,9 +8,9 @@
 <body>
 <main class="container">
     <section class="jumbotron text-center">
-        <h1>500 Internal Server Error</h1>
+        <h1>503 Service Unavailable</h1>
         <p class="lead text-muted">
-            An internal server error occurred.<br/>
+            The service is currently unavailable.<br/>
             Please try again later or contact the administrator for assistance.<br/>
         </p>
         <p>
