--- a/src/main/resources/templates/error/401.html
+++ b/src/main/resources/templates/error/401.html
@@ -8,10 +8,10 @@
 <body>
 <main class="container">
     <section class="jumbotron text-center">
-        <h1>400 Bad Request</h1>
+        <h1>401 Unauthorized</h1>
         <p class="lead text-muted">
-            The server could not understand the request due to invalid syntax.<br/>
-            Please check your request and try again.<br/>
+            Sorry, you are not authorized to access this resource.<br/>
+            Please authenticate yourself and try again.<br/>
         </p>
         <p>
             <a th:href="@{/}" class="btn btn-primary my-2">Main page</a>
