--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -8,10 +8,10 @@
 <body>
 <main class="container">
     <section class="jumbotron text-center">
-        <h1>401 Unauthorized</h1>
+        <h1>403 Forbidden</h1>
         <p class="lead text-muted">
-            Sorry, you are not authorized to access this resource.<br/>
-            Please authenticate yourself and try again.<br/>
+            Access to the requested resource is forbidden.<br/>
+            Please contact the administrator for further assistance.<br/>
         </p>
         <p>
             <a th:href="@{/}" class="btn btn-primary my-2">Main page</a>
