--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
+<head th:replace="~{fragments/head.html :: head-title(~{::title})}">
+    <title th:text="#{title.error}">title.error</title>
 </head>
+
 <body>
-$END$
+<main class="container">
+    <section class="jumbotron text-center">
+        <h1>500 Internal Server Error</h1>
+        <p class="lead text-muted">
+            An internal server error occurred.<br/>
+            Please try again later or contact the administrator for assistance.<br/>
+        </p>
+        <p>
+            <a th:href="@{/}" class="btn btn-primary my-2">Main page</a>
+        </p>
+    </section>
+</main>
+
+<footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 </body>
+
 </html>
